--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -1,4 +1,12 @@
 @media (max-width:960px) {
+    h2 {
+        font-size: 2rem;
+    }
+
+    #info-entradas {
+        padding: 1rem 0rem 0rem;
+    }
+
     #info-entradas div:has(.col-12.text-center){
         padding-right: 0rem;
         padding-left: 0rem;
@@ -367,6 +375,36 @@
         border-radius: 5px;
     }
 
+    #nosotros-tarjetas {
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+        padding: 0rem .5rem;
+        margin: 0rem;
+        gap: 1rem .5rem;
+    }
+
+    #nosotros-tarjetas > article {
+        overflow: hidden;
+    }
+
+    #nosotros-tarjetas img {
+        height: 25vh;
+        width: 100%;
+        border-radius: 0px;
+    }
+
+    #quienes-somos h2 {
+        margin: 1.5rem;
+    }
+
+    .gente {
+        width: auto;
+        margin: 1rem;
+    }
+
+    a.sumate-equipo {
+        box-shadow: 0px 5px 5px var(--marron-oscuro);
+    }
 }
 
 
