--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,31 +45,7 @@ a {
     --marron-oscuro: #311C08;
 }
 
-/* ROBOTO FUENTE */
-/* @font-face {
-    font-family: 'Roboto-Regular';
-    src: url('/fonts/Roboto-Regular.ttf');
-}
-@font-face {
-    font-family: 'Roboto-Medium';
-    src: url('/fonts/Roboto-Medium.ttf');
-}
-@font-face {
-    font-family: 'Roboto-Bold';
-    src: url('/fonts/Roboto-Bold.ttf');
-}
-@font-face {
-    font-family: 'Roboto-Light';
-    src: url('/fonts/Roboto-Light.ttf');
-}
-@font-face {
-    font-family: 'Roboto-Black';
-    src: url('/fonts/Roboto-Black.ttf');
-}
-@font-face {
-    font-family: 'Roboto-Thin';
-    src: url('/fonts/Roboto-Thin.ttf');
-} */
+
 /* LATO FUENTE */
 @font-face {
 	font-family: 'Lato-Light';
@@ -108,12 +84,7 @@ a {
     margin: 0;
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
-/* #inicio .accion h4 {
-    font-family: 'Roboto-Black';
-    color: var(--gris);
-    margin: 1rem auto 3rem;
-    font-size: 1.15rem;
-} */
+
 #inicio .accion h2#edicion {
 	font-family: 'Lato-Black';
     color: var(--gris);
@@ -147,7 +118,6 @@ a {
 a#programacion {
     position: relative;
     overflow: hidden;
-    /* border: 1px solid var(--purpura); */
     color: var(--purpura);
     display: inline-block;
     padding: .5rem 2rem;
@@ -209,7 +179,6 @@ a#programacion:hover span:last-child {
 }
 
 div#entrada {
-    /* padding: 0rem 0rem 0rem 1rem; */
     border-radius: 5px; 
     display: flex;
     align-items: center;
@@ -248,7 +217,6 @@ section#inicio div#entrada a {
 #info-programacion{
     display: flex;
 	flex-direction: column;
-	/* gap: 2rem; */
 	padding: 5rem 0rem;
     justify-content: center;
     align-items: center;
@@ -266,8 +234,6 @@ section#inicio div#entrada a {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: var(--gris); */
-    /* background-color: #6b371a; */
 	background: linear-gradient( 20deg, var(--marron), #632e12);
     color: var(--gris);
 }
@@ -302,7 +268,6 @@ section#inicio div#entrada a {
 	position: relative;
 	font-size: .845rem;
 	margin: 0;
-	/* visibility: hidden; */
 	opacity: 0;
 	bottom: -40px;
 	transition: all 500ms;
@@ -360,22 +325,11 @@ section#inicio div#entrada a {
     border-radius: 10px;
     background-color: var(--amarillo);
     padding: 2rem;
-    /* box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 2px 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3); */
 }
 
 
 
 /* Entradas */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap'); */
-
-/* :root {
-	font-size: 20px;
-	--dark-blue: #1f2029;
-	--white-gr: #c4c3ca;
-	--yellow: #ffeba7;
-	--yellow-2: #f8ab37;
-} */
 
 #info-entradas body{
 	color: var(--white-gr);
@@ -384,7 +338,6 @@ section#inicio div#entrada a {
 }
 #info-entradas h1 {
 	font-family: 'Lato-Regular';
-	/* font-weight: 700; */
 	color: var(--white-gr);
 	font-size: 36px;
 }
@@ -394,7 +347,6 @@ section#inicio div#entrada a {
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 .char {
-	/* transform: translateY(115px); */
 	transition: transform .5;
 }
 #info-entradas p {
@@ -545,8 +497,6 @@ section#inicio div#entrada a {
 }
 .checkbox-ticket + label .price span{
 	font-family: 'Lato-Regular';
-	/* font-size: 26px; */
-	/* line-height: 1; */
 	letter-spacing: 4px;
 }
 .checkbox-ticket + label .uil {
@@ -730,7 +680,6 @@ section#inicio div#entrada a {
 	box-shadow: 0px 0px 20px #1f2029;
 	background: var(--marron);
 	background: radial-gradient(circle, var(--marron), var(--marron-oscuro));
-	/* background: radial-gradient(circle, var(--amarillo-op-70), var(--bordo)) */
 }
 
 .entradas-tickets label img:first-of-type {
@@ -812,6 +761,9 @@ footer #int img {
 .item-footer {
 	width: 100%;
 }
+.item-footer:first-of-type a {
+	cursor: pointer;
+}
 .item-footer > div:first-of-type{
 	display: flex;
 	flex-direction: column;
@@ -821,7 +773,6 @@ footer #int img {
 }
 .item-footer p a {
 	line-height: 2.65rem;
-	/* border: 2px solid #d9d9d92c; */
 	border: 1px solid #5f1c3e;
 	background-color: #5f1c3e;
 }
@@ -928,7 +879,6 @@ footer .logos-footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	/* height: 100vh; */
 	padding: 4rem 0rem;
 	background-color: var(--amarillo);
 	color: var(--gris);
@@ -944,7 +894,6 @@ footer .logos-footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	/* height: 100vh; */
 	padding: 4rem 0rem 2rem;
 	background-color: var(--marron-oscuro);
 	color: var(--gris);
@@ -976,7 +925,6 @@ footer .logos-footer {
 }
 
 .festivales a:nth-of-type(2) img {
-	/* height: 20svh; */
 	width: 30svh;
 	object-fit: contain;
 }
@@ -986,7 +934,6 @@ footer .logos-footer {
 	padding: .2rem 1rem;
 	color: var(--gris);
 	text-align: center;
-	/* background-color: var(--bordo); */
 }
 
 @media (hover:hover) {
@@ -1032,7 +979,6 @@ footer .logos-footer {
     
 	padding: 1rem 1.85rem;
 
-	/* border: 1px solid var(--bordo); */
 	border-radius: 10px;
 	background-color: #6d1955;
 }
@@ -1044,7 +990,6 @@ footer .logos-footer {
 .sedes-info h1{
 	font-weight: 200;
 	color: var(--amarillo);
-	/* border-bottom: 1px solid var(--amarillo); */
 	padding-bottom: .3rem;
 	margin-bottom: .3rem;
 }
@@ -1055,19 +1000,11 @@ footer .logos-footer {
 	font-size: .8rem;
 }
 
-/* .sub-sedes-info{
-	padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-	justify-content: space-between;
-} */
-
 .sub-sedes-info {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-auto-rows: auto;
 	grid-gap: .25rem;
-	grid-auto-rows: minmax(60px, auto);
 }
 
 iframe#mapa {
@@ -1105,7 +1042,6 @@ iframe#mapa {
 	width: 95vw;
 	flex-direction: column;
 	align-items: center;
-	/* box-shadow: 1px 10px 30px #00000071; */
 }
 
 #obras div.slider {
@@ -1114,7 +1050,6 @@ iframe#mapa {
     overflow: hidden;
     height: max-content;
 	width: auto;
-	/* width: 100%; */
 
     scrollbar-width: none;
 	scroll-behavior: smooth;
@@ -1122,10 +1057,10 @@ iframe#mapa {
 
 #obras div.slider article {
 	width: 100vw;
+	height: 75vh;
     display: flex;
     flex-direction: row;
     flex: 0 0 100%;
-    /* gap: 0; */
     justify-content: start;
     border-radius: 10px;
     overflow: hidden;
@@ -1133,7 +1068,7 @@ iframe#mapa {
 
 #obras div.slider article div {
 	height: auto;
-	width: 50vw;
+	width: 100%;
 	gap: .5rem;
 }
 
@@ -1165,7 +1100,6 @@ iframe#mapa {
 .info-obras p {
 	padding-top: 1rem;
 	overflow: auto;
-	font-size: smaller;
 }
 
 .info-obras i {
@@ -1184,6 +1118,22 @@ div article .info-obras p {
 }
 #obras div article h6{
 	text-transform: uppercase;
+}
+
+.numero-obra {
+	display: flex;
+	justify-content: space-between;
+}
+
+.numero-obra p {
+	align-self: center;
+	font-size: smaller;
+	font-weight: 900;
+	text-transform: uppercase;
+	color: var(--gris) !important;
+	padding: .2rem .5rem;
+	border-radius: 5px;
+	background-color: var(--purpura);
 }
 
 /* FIN OBRAS */
@@ -1207,7 +1157,6 @@ div article .info-obras p {
 	border-radius: 10px;
 	border: 1px solid var(--gris);
 	padding-bottom: 1.5rem;
-	/* padding: 1.5rem 1rem; */
 	color: var(--bordo);
 	text-align: center;
 	transition: all .3s;
@@ -1259,7 +1208,6 @@ div article .info-obras p {
 
 .gente {
 	display: flex;
-	/* flex-direction: column; */
 	width: 40vw;
 	gap: .5rem;
 	align-items: center;
@@ -1322,9 +1270,7 @@ a.sumate-equipo {
 }
 
 div#form-contacto {
-	/* width: 90%; */
 	display: grid;
-	/* gap: 2rem; */
 	grid-template-columns: 1fr;
 	padding: 1.3rem 3rem .7rem;
 	margin: 0rem 8rem;
@@ -1489,7 +1435,6 @@ p.archivos {
 	cursor: pointer;
 	padding: .5rem;
 	border-radius: 10px;
-	/* aspect-ratio: 1/1; */
 	transition: all .3s;
 }
 @media (hover:hover) {
@@ -1498,11 +1443,6 @@ p.archivos {
 		background-color: var(--gris);
 		color: var(--marron-oscuro);
 	}
-}
-
-div#form-contacto p i input[type="file"]::file-selector-button {
-	/* background-color: #000;
-	visibility: hidden; */
 }
 
 #form-contacto .custom-file-container .input-visible,
@@ -1531,7 +1471,6 @@ div#form-contacto p i input[type="file"]::file-selector-button {
 @media (hover:hover) {
 	#form-contacto .custom-file-container .input-visible:hover{
 		background-color: var(--gris);
-		/* box-shadow: 0px 6px 6px #0000006c; */
 		color: var(--marron);
 		outline: 1px solid var(--gris);
 		transform: scale(1.05);
