Se corrigen estilos

--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -410,6 +410,13 @@
     a.sumate-equipo h5 {
         padding: .3rem .5rem;
     }
+
+    .misiones-mobile img:nth-child(1){
+        display: none;
+    }
+    .misiones-mobile img:nth-child(2){
+        display: block;
+    }
 }
 
 
