Se corrigen aportes de equipo

--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -417,6 +417,18 @@
     .misiones-mobile img:nth-child(2){
         display: block;
     }
+
+    .numero-obra {
+        flex-direction: column;
+        align-items: start;
+    }
+    .numero-obra p {
+        color: var(--purpura) !important;
+        border: 1px solid var(--purpura);
+    }
+    .numero-obra p span {
+        color: var(--gris) !important;
+    }
 }
 
 
