--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -368,7 +368,6 @@
         grid-template-columns: 1fr;
     }
 
-  
     #info-programacion .controls #allDaysContainer .day-container{
         width: 200vw;
         align-items: start;
@@ -377,6 +376,7 @@
         position: sticky;
         left: 1rem;
         margin: .5rem 1rem 2rem;
+    }
 
     div#form-contacto p label.mas-datos {
         grid-template-columns: 1fr 1fr;
