--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -205,6 +205,9 @@
     #obras div.slider {
         overflow: visible;
     }
+    #obras div.slider-container.slider-offset > .slider {
+        transform: translateX(-60px);
+    }
     
     #obras div.slider article {
         width: 100%;
@@ -431,6 +434,16 @@
     .numero-obra {
         flex-direction: column;
         align-items: start;
+    }
+
+
+    #obras div.slider article div.info-obras {
+        height: 60vh;
+        overlay: auto;
+    }
+
+    .colaboradores img {
+        max-height: 90px;
     }
 }
 
