--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1764,3 +1764,34 @@ div#modal-formulario form#contact-form textarea	{
 	padding: 0rem;
 	background-color: transparent;
 }
+
+#quienes-colaboramos{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 4rem 1.5rem;
+	background-color: var(--amarillo);
+	color: var(--gris);
+}
+#quienes-colaboramos h2 {
+	font-family: 'Lato-Light';
+	margin: 1.5rem auto;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+.colaboradores {
+    width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+	gap: 1rem;
+	place-content: center;
+}
+
+.colaboradores img {
+	width: auto;
+	height: auto;
+	object-fit: contain;
+	max-width: 100%;
+	max-height: 120px;
+}
