--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1783,8 +1783,8 @@ div#modal-formulario form#contact-form textarea	{
 .colaboradores {
     width: 100%;
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-	gap: 1rem;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 2rem;
 	place-content: center;
 }
 
@@ -1792,6 +1792,8 @@ div#modal-formulario form#contact-form textarea	{
 	width: auto;
 	height: auto;
 	object-fit: contain;
-	max-width: 100%;
-	max-height: 120px;
+	max-width: 170px;
+	max-height: 70px;
+	align-self: center;
+    justify-self: center;
 }
