--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ a {
 }
 
 
-
+/* 
 
 a#programacion {
     position: relative;
@@ -179,7 +179,7 @@ a#programacion:hover span:last-child {
     opacity: 1;
     width: 100%;
     transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
-}
+} */
 
 div#entrada {
     border-radius: 5px; 
