Se agregan elementos varios
Imagen de Vicky, Attem, favicon

--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -372,7 +372,8 @@
     }
 
     #info-programacion .controls #allDaysContainer .day-container{
-        width: 200vw;
+        /* width: 200vw; */
+        width: max-content;
         align-items: start;
     }
     #info-programacion .controls #allDaysContainer .day-container h2 {
