--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,8 +252,8 @@ section#inicio div#entrada a {
 }
 
 #info-programacion .controls #allDaysContainer .day-container {
-	width: 70vw;
-	width: calc(75vw - 5px);
+	/* width: calc(75vw - 5px); */
+	width: max-content;
 	padding: 1rem;
 	border-radius: 10px;
 	background-color: #6d1955;
@@ -465,6 +465,11 @@ section#inicio div#entrada a {
 	display: block;
 	background: var(--amarillo);
 }
+.checkbox-ticket:checked + label:before,
+.checkbox-ticket:not(:checked) + label.ticket-4:before{
+	background-color: var(--purpura);
+}
+
 .checkbox-ticket:not(:checked) + label:after{
 	content: '';
 	position: absolute;
@@ -492,6 +497,19 @@ section#inicio div#entrada a {
 	background-color: var(--amarillo);
 	transition: all 250ms linear;
 }
+.checkbox-ticket:checked + label.ticket-4:after{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 0;
+	z-index: -1;
+	display: block;
+	background-color: var(--purpura-op-70);
+	transition: all 250ms linear;
+}
 .checkbox-ticket:checked + label{
 	transform: translateY(-10px);
 }
@@ -503,6 +521,13 @@ section#inicio div#entrada a {
 	color: var(--marron);
 	display: block;
 	transition: all 250ms linear;
+}
+.checkbox-ticket + label.ticket-4 .duration{
+	padding: .3rem;
+	border-radius: 5px;
+	background-color: #fff;
+	color: var(--purpura);
+	font-family: 'Lato-Black';
 }
 .checkbox-ticket + label:last-child span.duration{
 	line-height: 1.85rem;
@@ -534,14 +559,26 @@ section#inicio div#entrada a {
 	display: block;
 	transition: all 250ms linear;
 }
+.checkbox-ticket + label.ticket-4 .price{
+	color: #fff;
+}
 .checkbox-ticket:checked + label .price,
 .checkbox-ticket:checked + label .duration	{
 	color: #d9d9d9c4;
+}
+.checkbox-ticket:checked + label.ticket-4 .price,
+.checkbox-ticket:checked + label.ticket-4 .duration	{
+	color: var(--amarillo);
 }
 .checkbox-ticket + label:hover .price,
 .checkbox-ticket + label:hover .duration,
 .checkbox-ticket + label:hover .time {
 	color: #d9d9d9;
+}
+.checkbox-ticket + label.ticket-4:hover .price,
+.checkbox-ticket + label.ticket-4:hover .duration,
+.checkbox-ticket + label.ticket-4:hover .time {
+	color: var(--amarillo);
 }
 .checkbox-ticket + label .price span{
 	font-family: 'Lato-Regular';
@@ -565,7 +602,12 @@ section#inicio div#entrada a {
 	transition: all 250ms linear;
 	border-top: 5.5px dotted;
 	padding-top: 1.3rem;
+	width: 100%;
 }
+.checkbox-ticket + label.ticket-4 .time{
+	color: #fff;
+}
+
 .top-dots,
 .bottom-dots {
 	position: absolute;
@@ -736,6 +778,9 @@ section#inicio div#entrada a {
 	opacity: .3;
 	width: 3vw;
 	transition: all .3s;
+}
+.entradas-tickets label.ticket-4 img:first-of-type{
+	opacity: .65;
 }
 .entradas-tickets label:hover img:first-of-type,
 .entradas-ticket .checkbox-ticket:checked + label img:first-of-type {
